# nullis-shepherd

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  GRANT_APPLICATION.md  README.md  docker-compose.yml  engine.docker.toml  engine.e2e.toml  engine.example.toml  engine.load.toml  engine.m2.toml  engine.m3.toml  flake.nix  justfile  m1-pr-message.md  m2-pr-message.md  m3-pr-message.md  m4-features.md  m4-pr-message.md  m5-features.md  m5-pr-message.md  potential-issues.md
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml
crates/nexum-cli/: Cargo.toml
crates/nexum-cli/src/: cli.rs  main.rs
crates/nexum-engine/: Cargo.toml
crates/nexum-engine/src/: bindings.rs  cli.rs  engine_config.rs  main.rs  manifest.rs  supervisor.rs
crates/nexum-engine/src/host/: cow_orderbook.rs  error.rs  local_store_redb.rs  mod.rs  provider_pool.rs  state.rs
crates/nexum-engine/src/host/cow_orderbook/: tests.rs
crates/nexum-engine/src/host/impls/: chain.rs  clock.rs  cow_api.rs  http.rs  identity.rs  local_store.rs  messaging.rs  mod.rs  random.rs
crates/nexum-engine/src/host/local_store_redb/: tests.rs
crates/nexum-engine/src/manifest/: capabilities.rs  error.rs  load.rs  mod.rs  types.rs
crates/nexum-engine/src/runtime/: event_loop.rs  limits.rs  mod.rs  poison_policy.rs  restart_policy.rs
crates/nexum-engine/src/supervisor/: tests.rs
crates/nexum-runtime/: Cargo.toml
crates/nexum-runtime/examples/: embed.rs
crates/nexum-runtime/src/: bindings.rs  bootstrap.rs  engine_config.rs  lib.rs  main.rs  supervisor.rs
crates/nexum-runtime/src/host/: cow_orderbook.rs  error.rs  local_store_redb.rs  mod.rs  provider_pool.rs  state.rs
crates/nexum-runtime/src/host/component/: chain.rs  clock.rs  cow.rs  http.rs  mod.rs  (+2 more)
crates/nexum-runtime/src/manifest/: mod.rs  types.rs
crates/nexum-runtime/src/runtime/: event_loop.rs  mod.rs
crates/nexum-runtime/src/supervisor/: tests.rs
crates/nxm-engine/: Cargo.toml
crates/nxm-engine/src/: main.rs
crates/shepherd-backtest/: Cargo.toml
crates/shepherd-backtest/src/: fixtures.rs  main.rs  replay.rs  report.rs
crates/shepherd-sdk/: Cargo.toml  README.md
crates/shepherd-sdk-test/: Cargo.toml
crates/shepherd-sdk-test/src/: lib.rs
crates/shepherd-sdk/src/: address.rs  config.rs  host.rs  lib.rs  prelude.rs  proptests.rs  wit_bindgen_macro.rs
crates/shepherd-sdk/src/chain/: chainlink.rs  eth_call.rs  mod.rs
crates/shepherd-sdk/src/cow/: app_data.rs  composable.rs  error.rs  mod.rs  order.rs
docs/: 00-overview.md  01-runtime-environment.md  02-modules-events-packaging.md  03-module-discovery.md  04-state-store.md  05-sdk-design.md  06-production-hardening.md  07-rpc-namespace-design.md  08-platform-generalisation.md  deployment.md  production.md  qa-signoff-cow-1063.md  qa-signoff.md  sdk.md  tutorial-first-module.md
docs/adr/: 0001-cow-twap-ethflow-host-helpers.md  0001-engine-toml-separate-from-nexum-toml.md  0002-patch-cowprotocol-to-bleu-cow-rs.md  0002-provider-pool-transport-by-scheme.md  0003-local-store-namespacing.md  0004-cow-api-via-cached-orderbookapi.md  0004-patch-cowprotocol-to-bleu-cow-rs.md  0005-cow-api-via-cached-orderbookapi.md  0005-provider-pool-transport-by-scheme.md  0006-cow-twap-ethflow-host-helpers.md  0006-engine-toml-separate-from-nexum-toml.md  0007-upstream-protocol-logic-to-cow-rs.md  0008-factory-subscriptions-in-manifest.md  0009-host-trait-surface.md
docs/deployment/: docker.md  prometheus.yml
docs/diagrams/: README.md  architecture.mmd  diagrams.md  engine-boot.mmd  module-lifecycle.mmd  sequence-ethflow.mmd  sequence-twap.mmd  subscription-dispatch.mmd  wit-call-path.mmd
docs/migration/: 0.1-to-0.2.md
docs/operations/: e2e-cow-1064-prep.md  e2e-prep.md  e2e-testnet-runbook.md  load-testnet-runbook.md  m2-testnet-runbook.md  m3-edge-case-validation.md  m3-testnet-runbook.md
docs/operations/backtest-reports/: backtest-7d-2026-06-22.md
docs/operations/baselines/: baseline-latency-2026-06-19.md
docs/operations/e2e-reports/: e2e-report-2026-06-18.md  e2e-report.template.md
docs/operations/load-reports/: load-20x20-2026-06-19.md  load-50x50-2026-06-19.md  load-50x50-parallel-2026-06-19.md  load-5x5-2026-06-19.md
modules/ethflow-watcher/: Cargo.toml  module.toml
modules/ethflow-watcher/src/: lib.rs  strategy.rs
modules/example/: Cargo.toml  module.toml
modules/example/src/: lib.rs
modules/examples/balance-tracker/: Cargo.toml  module.toml
modules/examples/balance-tracker/src/: lib.rs  strategy.rs
modules/examples/price-alert/: Cargo.toml  module.toml
modules/examples/price-alert/src/: lib.rs  strategy.rs
modules/examples/stop-loss/: Cargo.toml  module.toml
modules/examples/stop-loss/src/: lib.rs  strategy.rs
modules/fixtures/flaky-bomb/: Cargo.toml  module.toml
modules/fixtures/flaky-bomb/src/: lib.rs
modules/fixtures/fuel-bomb/: Cargo.toml  module.toml
modules/fixtures/fuel-bomb/src/: lib.rs
modules/fixtures/memory-bomb/: Cargo.toml  module.toml
modules/fixtures/memory-bomb/src/: lib.rs
modules/twap-monitor/: Cargo.toml  module.toml
modules/twap-monitor/src/: lib.rs  strategy.rs
scripts/: README.md  _ethflow_quote.py  _twap_calldata.py  e2e-finish.sh  e2e-onchain.sh  e2e-report-gen.sh  e2e-run.sh  env-template  lib.sh  load-bootstrap.sh  load-run.sh  load-teardown.sh
tools/backtest-collect/: backtest_collect.py  fixtures-2026-06-22.json
tools/baseline-latency/: baseline_latency.py
tools/baseline-latency/data/: arbitrum_one.json  base.json  gnosis.json  mainnet.json  sepolia.json
tools/load-gen/: Cargo.toml
tools/load-gen/src/: main.rs
tools/orderbook-mock/: Cargo.toml
tools/orderbook-mock/src/: main.rs
wit/nexum-host/: chain.wit  clock.wit  event-module.wit  http.wit  identity.wit  local-store.wit  logging.wit  messaging.wit  query-module.wit  random.wit  remote-store.wit  types.wit
wit/shepherd-cow/: cow-api.wit  cow.wit  order.wit  shepherd-module.wit  shepherd.wit
(+12 files in other folders)
