[workspace]
members = [
    "crates/nexum-engine",
    "crates/shepherd-sdk",
    "crates/shepherd-sdk-test",
    "modules/ethflow-watcher",
    "modules/example",
    "modules/examples/balance-tracker",
    "modules/examples/price-alert",
    "modules/examples/stop-loss",
    "modules/fixtures/fuel-bomb",
    "modules/fixtures/memory-bomb",
    "modules/twap-monitor",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/nullisLabs/shepherd"

# `cowprotocol` v1.0.0-alpha.3 (the crates.io release the engine
# depends on) was cut from `cowdao-grants/cow-rs` PR #5 at commit
# `1742ffa`. `bleu/cow-rs` main has diverged since with: the
# `composable::Proof` width fix (relevant to the TWAP poll path),
# `OrderCreation` zero-from-address fast-fail, the `order_book` /
# `composable` submodule splits, `OrderPostErrorKind` + `retry_hint()`
# (BLEU-822, the protocol-level retry contract M2 modules dispatch
# on), and `OrderBookApi::with_base_url(chain, base_url)` for barn /
# staging routing (BLEU-823). Patching to that commit picks the lot
# up without waiting for an alpha.4 publish. Drop once
# `cowprotocol >= 1.0.0-alpha.4` ships.
[patch.crates-io]
cowprotocol = { git = "https://github.com/bleu/cow-rs", rev = "57f5f553ab28c9fff54089daf2d39b4282f3e4dd" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
