[package]
name = "nexum-cli"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "nexum"
path = "src/main.rs"

[dependencies]
nexum-runtime = { path = "../nexum-runtime" }

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
