[package]
name = "nexum-engine"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
wasmtime = { version = "45", features = ["component-model"] }
wasmtime-wasi = "45"
anyhow.workspace = true
tokio.workspace = true
getrandom = "0.4"
serde.workspace = true
toml = "1"
