[package]
name = "shepherd-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Guest-side SDK for Shepherd modules: re-exports, helpers, and prelude on top of cowprotocol + alloy types."

[lib]
# Plain library - modules link this and emit their own cdylib for the
# WASM Component. Building shepherd-sdk on the host target is also
# supported so the helpers are unit-testable without a wasm toolchain.

[dependencies]
cowprotocol = { version = "1.0.0-alpha.3", default-features = false }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
