[package]
name = "ethflow-watcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# `cdylib` is the wasm-component artefact the engine loads at
# runtime. `rlib` exposes the pure-Rust strategy module so native
# tools (e.g. `shepherd-backtest`, COW-1078) can drive `on_logs`
# directly without an embedded runtime.
crate-type = ["cdylib", "rlib"]

[dependencies]
shepherd-sdk = { path = "../../crates/shepherd-sdk" }
cowprotocol = { version = "1.0.0-alpha.3", default-features = false }
alloy-primitives = { version = "1.5", default-features = false, features = ["std"] }
alloy-sol-types = { version = "1.5", default-features = false, features = ["std"] }
wit-bindgen = { version = "0.57", default-features = false, features = ["macros", "realloc"] }

[dev-dependencies]
shepherd-sdk-test = { path = "../../crates/shepherd-sdk-test" }
