[package]
name = "ethflow-watcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cowprotocol = { version = "1.0.0-alpha.3", default-features = false }
alloy-primitives = { workspace = true, default-features = false, features = ["std"] }
alloy-sol-types = { workspace = true, default-features = false, features = ["std"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
wit-bindgen.workspace = true
