[package]
name = "twap-monitor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cowprotocol = { version = "1.0.0-alpha.3", default-features = false }
alloy-sol-types = { version = "1.5", default-features = false }
wit-bindgen = { version = "0.57", default-features = false, features = ["macros", "realloc"] }
