[package]
name = "twap-monitor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
shepherd-sdk = { path = "../../crates/shepherd-sdk" }
cowprotocol = { version = "1.0.0-alpha.3", default-features = false }
alloy-primitives = { version = "1.6", default-features = false, features = ["std"] }
alloy-sol-types = { version = "1.6", default-features = false, features = ["std"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
# Snake_case variant labels for `BuildError` so submission-failure
# logs carry `error_kind = unknown_marker | cowprotocol` without an
# ad-hoc match ladder.
strum = { version = "0.26", default-features = false, features = ["derive"] }
thiserror = "2"
wit-bindgen = { version = "0.58", default-features = false, features = ["macros", "realloc"] }

[dev-dependencies]
shepherd-sdk-test = { path = "../../crates/shepherd-sdk-test" }
