[package]
name = "load-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "load-gen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-sol-types.workspace = true
alloy-transport-ws.workspace = true
futures.workspace = true
serde_json = { workspace = true, features = ["std"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
