[package]
name = "orderbook-mock"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "orderbook-mock"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
reqwest.workspace = true
tower = { workspace = true, features = ["util"] }
