[package]
name = "balance-tracker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shepherd example module: tracks native-token balances of a list of addresses and emits a log when one changes by more than a threshold. Demonstrates chain::request + local-store + multi-key persistence."

[lib]
crate-type = ["cdylib"]

[dependencies]
shepherd-sdk = { path = "../../../crates/shepherd-sdk" }
alloy-primitives = { version = "1.5", default-features = false, features = ["std"] }
wit-bindgen = { version = "0.57", default-features = false, features = ["macros", "realloc"] }
