[package]
name = "price-alert"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shepherd example module: polls a Chainlink price oracle every block and emits a Warn log when the price crosses a config-supplied threshold."

[lib]
crate-type = ["cdylib"]

[dependencies]
shepherd-sdk = { path = "../../../crates/shepherd-sdk" }
alloy-primitives = { version = "1.6", default-features = false, features = ["std"] }
wit-bindgen = { version = "0.58", default-features = false, features = ["macros", "realloc"] }

[dev-dependencies]
shepherd-sdk-test = { path = "../../../crates/shepherd-sdk-test" }
# Only used by tests in `strategy.rs` to encode a synthetic oracle
# return body; the production code uses `shepherd_sdk::chain::chainlink`
# which depends on sol-types internally.
alloy-sol-types = { version = "1.6", default-features = false, features = ["std"] }
