[package]
name = "stop-loss"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shepherd example module: stop-loss order submitter. Watches a Chainlink oracle, submits a pre-signed CoW order when price drops below a configured trigger, dedups via submitted:{uid}."

[lib]
crate-type = ["cdylib"]

[dependencies]
shepherd-sdk = { path = "../../../crates/shepherd-sdk" }
cowprotocol = { version = "1.0.0-alpha.3", default-features = false }
alloy-primitives = { version = "1.5", default-features = false, features = ["std"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
wit-bindgen = { version = "0.57", default-features = false, features = ["macros", "realloc"] }

[dev-dependencies]
shepherd-sdk-test = { path = "../../../crates/shepherd-sdk-test" }
# Only used by tests in `strategy.rs` to encode a synthetic oracle
# return body; the production code uses `shepherd_sdk::chain::chainlink`.
alloy-sol-types = { version = "1.5", default-features = false, features = ["std"] }
