[package]
name = "fuel-bomb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Evil-by-design fixture: on every event runs an unbounded loop to exhaust the wasmtime fuel budget. Engine must trap with OutOfFuel + mark the module dead."

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.57", default-features = false, features = ["macros", "realloc"] }
