[package]
name = "memory-bomb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "COW-1036 evil-by-design fixture: on every event allocates past the 64 MiB memory cap to force a memory-growth trap. Engine must trap + mark the module dead without taking down the supervisor."

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.57", default-features = false, features = ["macros", "realloc"] }
